# Genealogia

./: .env  .env.example  .gitattributes  .gitignore  .prettierrc  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  MIGRATION.md  Makefile  PORTALE_PROGETTO_GENEALOGIA.html  README.md  README_GEDCOM_SYNC.md  RootsMagic solo linea paterna 20260303.ged  TECHNICAL_SPEC_CURRENT_STATE.md  config.yaml  data_normalization_agent.py  data_normalization_masterplan.md  docker-compose.yml  eslint.config.mjs  gedcom_sync_orchestrator.py  index.html  ispf-keys.js  mandato_960.txt  manifest.webmanifest  package-lock.json  package.json  playwright.config.js  pyproject.toml  registerSW.js  requirements-dev.txt  requirements.txt  service-worker.js  setup.sh  setup_cron.sh  sw.js  verify_deployment.sh  version.json
GIARDINA/: README.md  (+1 more)
engine_scummlike/: CMakeLists.txt  main.c
genealogy-normalization-agent/: .coverage  .env.example  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  README.md  coverage.xml  docker-compose.yml  pyproject.toml  requirements.txt
genealogy-normalization-agent/config/: default.yaml  production.yaml
genealogy-normalization-agent/data/dashboard/: metrics.sqlite3
genealogy-normalization-agent/data/dashboard/exports/: history_2026-03-02_2026-03-02.json
genealogy-normalization-agent/docs/: API_OPERATIONS.md  API_REFERENCE.md  CLI_GUIDE.md  DAEMON_RUNBOOK.md  DASHBOARD_MONITORING.md  DATA_FLOW.md  INSTALLATION.md  TROUBLESHOOTING.md
genealogy-normalization-agent/scripts/: benchmark.py  run_api.py  run_daemon.py  run_web.py
genealogy-normalization-agent/src/: __init__.py
genealogy-normalization-agent/src/agent/: audit_logger.py  conflict_resolver.py  data_models.py  normalization_engine.py  quality_control.py
genealogy-normalization-agent/src/api/: routes.py  schemas.py  server.py
genealogy-normalization-agent/src/cli/: __init__.py  cli.py
genealogy-normalization-agent/src/daemon/: monitor.py
genealogy-normalization-agent/src/dashboard/: service.py
genealogy-normalization-agent/src/exporters/: __init__.py  gedcom_exporter.py  json_exporter.py
genealogy-normalization-agent/src/integrations/: __init__.py  gestionale_integration.py  giardina_integration.py
genealogy-normalization-agent/src/rules/: date_rules.py  duplicate_detection.py  name_rules.py  place_rules.py  relationship_rules.py
genealogy-normalization-agent/src/utils/: __init__.py  config.py
genealogy-normalization-agent/src/web/: app.py
genealogy-normalization-agent/src/web/static/: dashboard.css  dashboard.js
genealogy-normalization-agent/tests/: test_all.py  test_dashboard.py  test_engine.py  test_integration.py  test_rules.py
launcher/: CMakeLists.txt  gn_audio.c  gn_audio.h  gn_ini.c  gn_ini.h  gn_log.c  gn_log.h  gn_menu.c  gn_menu.h  gn_session.c  gn_session.h  gn_ui.c  gn_ui.h  launcher.ini  main.c
launcher/runtime/snapshots/: snapshot_20260302_122926.sqlite
(+793 files in other folders)
